--- a/model/ml/grammar.tex
+++ b/model/ml/grammar.tex
@@ -3,15 +3,15 @@
 \begin{tabular}{lcl}
 \vspace{5pt}
 
-$e_{M}$ & $=$ & $v_{M}$ $\vert$ $x$ $\vert$ $e_{M}$ $e_{M}$ $\vert$ $e_{M}$ $\lbrace T\rbrace$ $\vert$ $o$ $e_{M}$ $e_{M}$ $\vert$ $\mathtt{null?}$ $e_{M}$ $\vert$ $\mathtt{if0}$ $e_{M}$ $e_{M}$ $e_{M}$ \\
+$e_{M}$ & $=$ & $u_{M}$ $\vert$ $x$ $\vert$ $e_{M}$ $e_{M}$ $\vert$ $e_{M}$ $\lbrace T\rbrace$ $\vert$ $o$ $e_{M}$ $e_{M}$ $\vert$ $\mathtt{null?}$ $e_{M}$ $\vert$ $\mathtt{if0}$ $e_{M}$ $e_{M}$ $e_{M}$ \\
 
 \vspace{5pt}
 
-&& $\vert$ $\mathtt{cons}$ $e_{M}$ $e_{M}$ $\vert$ $f$ $e_{M}$ $\vert$ $\mathtt{fix}$ $e_{M}$ $\vert$ $\mathtt{wrong}^{T}$ string $\vert$ $^{T}MH^{T}$ $e_{H}$ \\
+&& $\vert$ $\mathtt{cons}$ $e_{M}$ $e_{M}$ $\vert$ $f$ $e_{M}$ $\vert$ $\mathtt{fix}$ $e_{M}$ $\vert$ $\mathtt{wrong}^{T}$ string $\vert$ $^{T}MS$ $e_{S}$ \\
 
 \vspace{5pt}
 
-&& $\vert$ $^{T}MS$ $e_{S}$ \\
+$u_{M}$ & $=$ & $v_{M}$ $\vert$ $^{T}MH^{T}$ $e_{H}$ \\
 
 \vspace{5pt}
 
@@ -35,7 +35,11 @@ $f$ & $=$ & $\mathtt{hd}$ $\vert$ $\mathtt{tl}$ \\
 
 \vspace{5pt}
 
-$E_{M}$ & $=$ & $[\,]_{M}$ $\vert$ $E_{M}$ $e_{M}$ $\vert$ $v_{M}$ $E_{M}$ $\vert$ $E_{M}$ $\lbrace T\rbrace$ $\vert$ $o$ $E_{M}$ $e_{M}$ $\vert$ $o$ $\overline{n}$ $E_{M}$ $\vert$ $\mathtt{null?}$ $E_{M}$ \\
+$E_{M}$ & $=$ & $U_{M}$ $\vert$ $^{T}MH^{T}$ $E_{H}$ \\
+
+\vspace{5pt}
+
+$U_{M}$ & $=$ & $[\,]_{M}$ $\vert$ $E_{M}$ $e_{M}$ $\vert$ $v_{M}$ $U_{M}$ $\vert$ $E_{M}$ $\lbrace T\rbrace$ $\vert$ $o$ $E_{M}$ $e_{M}$ $\vert$ $o$ $\overline{n}$ $E_{M}$ $\vert$ $\mathtt{null?}$ $E_{M}$ \\
 
 \vspace{5pt}
 
@@ -43,7 +47,7 @@ $E_{M}$ & $=$ & $[\,]_{M}$ $\vert$ $E_{M}$ $e_{M}$ $\vert$ $v_{M}$ $E_{M}$ $\ver
 
 \vspace{5pt}
 
-&& $\vert$ $^{T}MH^{T}$ $E_{H}$ $\vert$ $^{T}MS$ $E_{S}$
+&& $\vert$ $^{T}MS$ $E_{S}$
 \end{tabular}
 \caption{ML grammar and evaluation contexts}
 \label{mg}
