Changed M/S arith first op to v instead of n.

--- a/model/ml/grammar.tex
+++ b/model/ml/grammar.tex
@@ -39,7 +39,7 @@ $E_{M}$ & $=$ & $U_{M}$ $\vert$ $^{T}MH^{T}$ $E_{H}$ \\
 
 \vspace{5pt}
 
-$U_{M}$ & $=$ & $[\,]_{M}$ $\vert$ $E_{M}$ $e_{M}$ $\vert$ $v_{M}$ $U_{M}$ $\vert$ $E_{M}$ $\lbrace T\rbrace$ $\vert$ $o$ $E_{M}$ $e_{M}$ $\vert$ $o$ $\overline{n}$ $E_{M}$ $\vert$ $\mathtt{null?}$ $E_{M}$ \\
+$U_{M}$ & $=$ & $[\,]_{M}$ $\vert$ $E_{M}$ $e_{M}$ $\vert$ $v_{M}$ $U_{M}$ $\vert$ $E_{M}$ $\lbrace T\rbrace$ $\vert$ $o$ $E_{M}$ $e_{M}$ $\vert$ $o$ $v_{M}$ $E_{M}$ $\vert$ $\mathtt{null?}$ $E_{M}$ \\
 
 \vspace{5pt}
 
