--- a/model/scheme/grammar.tex
+++ b/model/scheme/grammar.tex
@@ -39,7 +39,7 @@ $E_{S}$ & $=$ & $U_{S}$ $\vert$ $SH^{T}$ $E_{H}$ \\
 
 \vspace{5pt}
 
-$U_{S}$ & $=$ & $[\,]_{S}$ $\vert$ $E_{S}$ $e_{S}$ $\vert$ $v_{S}$ $U_{S}$ $\vert$ $o$ $E_{S}$ $e_{S}$ $\vert$ $o$ $\overline{n}$ $E_{S}$ $\vert$ $p$ $E_{S}$ $\vert$ $\mathtt{if0}$ $E_{S}$ $e_{S}$ $e_{S}$ \\
+$U_{S}$ & $=$ & $[\,]_{S}$ $\vert$ $E_{S}$ $e_{S}$ $\vert$ $v_{S}$ $U_{S}$ $\vert$ $o$ $E_{S}$ $e_{S}$ $\vert$ $o$ $v_{S}$ $E_{S}$ $\vert$ $p$ $E_{S}$ $\vert$ $\mathtt{if0}$ $E_{S}$ $e_{S}$ $e_{S}$ \\
 
 \vspace{5pt}
 
