Rearranged progress cases into H/M and S cases, renamed/shortened case names.

--- a/chapter-2.tex
+++ b/chapter-2.tex
@@ -8,11 +8,15 @@ Hereafter the names Haskell, ML, and Scheme refer to their corresponding models,
 
 \section{Grammars}
 
-Haskell types $T$ comprise lumps $L$, natural numbers $N$, variables $X$, lists $[T]$, labels $T^{a}$, functions $T\rightarrow T$, and foralls $\forall X.T$.  Haskell values $v_{H}$ comprise functions $\lambda x:T.e_{H}$, type abstractions $\Lambda X.e_{H}$, natural numbers $\overline{n}$, empty lists $\mathtt{nil}^{T}$, list constructions $\mathtt{cons}$ $e_{H}$ $e_{H}$, Scheme boundaries with lump expected types $^{L}HS$ $v_{S}$, and Scheme boundaries with forall expected types $^{\forall X.T}HS$ $v_{S}$.  $\overline{n}$ syntactically represents the natural number $n$.  The first subexpression in list constructions is the head and the second is the tail.  Tails that are empty lists signify the ends of lists.  Haskell expressions $e_{H}$ comprise variables $x$, function applications $e_{H}$ $e_{H}$, type applications $e_{H}$ $\lbrace T\rbrace$, arithmetic operations $+$ $e_{H}$ $e_{H}$ and $-$ $e_{H}$ $e_{H}$, empty list predicates $\mathtt{null?}$ $e_{H}$, conditions $\mathtt{if0}$ $e_{H}$ $e_{H}$ $e_{H}$, list operations $\mathtt{hd}$ $e_{H}$ and $\mathtt{tl}$ $e_{H}$, fixed-point operations $\mathtt{fix}$ $e_{H}$, error reports $\mathtt{wrong}^{T}$ string, ML boundaries $^{T}HM^{T}$ $e_{M}$, and Scheme boundaries $^{T}HS$ $e_{S}$.  Empty list predicates determine whether lists are empty.  The first subexpression in conditions is the test, the second is the true alternative, and the third is the false alternative.  Empty list predicates and conditions use the natural number zero as true and all other natural numbers as false.  List operations produce the heads and tails of list constructions.  Fixed-point operations render functions recursive.  Error reports signal error conditions.  ML and Scheme boundaries embed expressions from those languages in Haskell.  Functions, empty lists, and error reports have type annotations that enable the calculation of their types.  Haskell evaluation contexts $E_{H}$ conform to an extended call-by-name (lazy) evaluation strategy.  Haskell holes are denoted $[\,]_{H}$.  Figure \ref{hg} defines the Haskell grammar and evaluation contexts.
+Haskell types $T$ comprise lumps $L$, natural numbers $N$, variables $X$, lists $[T]$, labels $T^{a}$, functions $T\rightarrow T$, and foralls $\forall X.T$.  Haskell values $v_{H}$ comprise functions $\lambda x:T.e_{H}$, type abstractions $\Lambda X.e_{H}$, natural numbers $\overline{n}$, empty lists $\mathtt{nil}^{T}$, list constructions $\mathtt{cons}$ $e_{H}$ $e_{H}$, Scheme boundaries with lump expected types $^{L}HS$ $v_{S}$, and Scheme boundaries with forall expected types $^{\forall X.T}HS$ $v_{S}$.  Haskell expressions $e_{H}$ comprise variables $x$, function applications $e_{H}$ $e_{H}$, type applications $e_{H}$ $\lbrace T\rbrace$, arithmetic operations $+$ $e_{H}$ $e_{H}$ and $-$ $e_{H}$ $e_{H}$, empty list predicates $\mathtt{null?}$ $e_{H}$, conditions $\mathtt{if0}$ $e_{H}$ $e_{H}$ $e_{H}$, list operations $\mathtt{hd}$ $e_{H}$ and $\mathtt{tl}$ $e_{H}$, fixed-point operations $\mathtt{fix}$ $e_{H}$, error reports $\mathtt{wrong}^{T}$ string, ML boundaries $^{T}HM^{T}$ $e_{M}$, and Scheme boundaries $^{T}HS$ $e_{S}$.  Haskell evaluation contexts $E_{H}$ conform to a call-by-name (lazy) evaluation strategy.  Haskell holes are denoted $[\,]_{H}$.  Figure \ref{hg} defines the Haskell grammar and evaluation contexts.
 
-ML's grammar differs from Haskell's grammar in three ways.  First, the heads and tails of list construction values are also values: $\mathtt{cons}$ $v_{M}$ $v_{M}$. Second, it has a list construction expression in which the heads and tails are expressions: $\mathtt{cons}$ $e_{M}$ $e_{M}$.  Third, its evaluation contexts conform to an extended call-by-value (eager) evaluation strategy.  Figure \ref{mg} defines the ML grammar and evaluation contexts.
+$\overline{n}$ syntactically represents the natural number $n$.  The first subexpression in list constructions is the head and the second is the tail.  Tails that are empty lists signify the ends of lists.  Empty list predicates determine whether lists are empty.  The first subexpression in conditions is the test, the second is the true alternative, and the third is the false alternative.  Empty list predicates and conditions use the natural number zero as true and all other natural numbers as false.  List operations produce the heads and tails of list constructions.  Fixed-point operations render functions recursive.  Error reports signal error conditions.  ML and Scheme boundaries embed expressions from those languages in Haskell.  Functions, empty lists, and error reports have type annotations that enable the calculation of their types.
 
-Scheme's grammar differs from ML's grammar in four ways.  First, it does not have type abstractions, type applications, and fixed-point operations and the evaluation contexts that contain them.  Second, it does not have types.  Third, it does not have type annotations for functions, empty lists, and error reports.  Fourth, it has three value predicate expressions that determine whether values are functions $\mathtt{fun?}$ $e_{S}$, lists $\mathtt{list?}$ $e_{S}$, and natural numbers $\mathtt{nat?}$ $e_{S}$.  Figure \ref{sg} defines the Scheme grammar and evaluation contexts.
+ML and Scheme have unforced values, which are forced values and Haskell boundaries, and forced values, which are
+
+ML unforced values $u_{M}$ comprise forced values $v_{M}$ and Haskell boundaries $^{T}MH^{T}$ $e_{H}$.  ML forced values comprise functions, type abstractions, natural numbers, empty lists, list constructions $\mathtt{cons}$ $v_{M}$ $v_{M}$, Scheme boundaries with lump expected types $^{L}MS$ $v_{S}$, Scheme boundaries with forall expected types $^{\forall X.T}MS$ $v_{S}$, and Haskell boundaries with list expected types $^{[T]}MH^{[T]}$ $(\mathtt{cons}$ $e_{H}$ $e_{H})$.  ML expressions comprise unforced values $u_{M}$, variables, function applications, type applications, arithmetic operations, empty list predicates, conditions, list constructions $\mathtt{cons}$ $e_{M}$ $e_{M}$, list operations, fixed-point operations, error reports, and ML boundaries $^{T}MS$ $e_{S}$.  ML unforced evaluation contexts $U_{M}$ do not force the reduction of Haskell boundaries and conform to an extended call-by-value (eager) evaluation strategy.  ML forced evaluation contexts $E_{M}$ force the reduction of Haskell boundaries.  ML holes are denoted $[\,]_{M}$.  Figure \ref{mg} defines the ML grammar and evaluation contexts.
+
+Scheme unforced values comprise forced values and Haskell boundaries $SH^{T}$ $e_{H}$.  Scheme forced values comprise functions, natural numbers, empty lists, list constructions $\mathtt{cons}$ $v_{S}$ $v_{S}$, Haskell boundaries with list actual types $SH^{[T]}$ $(\mathtt{cons}$ $e_{H}$ $e_{H})$, Haskell boundaries with label actual types $SH^{T^{a}}$ $v_{H}$, and ML boundaries with label actual types $SM^{T^{a}}$ $v_{M}$.  First, it does not have type abstractions, type applications, and fixed-point operations and the evaluation contexts that contain them.  Second, it does not have types.  Third, it does not have type annotations for functions, empty lists, and error reports.  Fourth, it has three value predicate expressions that determine whether values are functions $\mathtt{fun?}$ $e_{S}$, lists $\mathtt{list?}$ $e_{S}$, and natural numbers $\mathtt{nat?}$ $e_{S}$.  Figure \ref{sg} defines the Scheme grammar and evaluation contexts.
 
 Letter subscripts of grammar non-terminals denote the language to which they belong, and numbered superscripts denote individual instances of them.  Variable and type variable names must be unique across all languages.
 
