--- a/model/scheme/grammar.tex
+++ b/model/scheme/grammar.tex
@@ -15,7 +15,7 @@ $u_{S}$ & $=$ & $v_{S}$ $\vert$ $SH^{T}$ $e_{H}$ \\
 
 \vspace{5pt}
 
-$v_{S}$ & $=$ & $\lambda x.e_{S}$ $\vert$ $\overline{n}$ $\vert$ $\mathtt{nil}$ $\vert$ $\mathtt{cons}$ $v_{S}$ $v_{S}$ $\vert$ $SH^{[T]}$ $(\mathtt{cons}$ $e_{H}$ $e_{H})$ $\vert$ $SH^{T^{a}}$ $v_{H}$ \\
+$v_{S}$ & $=$ & $\lambda x.e_{S}$ $\vert$ $\overline{n}$ $\vert$ $\mathtt{nil}$ $\vert$ $\mathtt{cons}$ $v_{S}$ $v_{S}$ $\vert$ $SH^{[T]}$ $(\mathtt{cons}$ $e_{H}$ $e_{H})$ $\vert$ $SH^{T^{a}}$ $e_{H}$ \\
 
 \vspace{5pt}
 
