--- a/proof/theorems/haskell-ml-progress.tex
+++ b/proof/theorems/haskell-ml-progress.tex
@@ -1,36 +1,27 @@
 \begin{theorem}
 \label{ps}
-If $\vdash_{A}e_{A}:T$ then $e_{A}$ is a value or $e_{A}\rightarrow e_{A}'$ or $e_{A}\rightarrow$ \emph{\textbf{Error}:\;string} where $A\in\lbrace H,M,S\rbrace$.
+If $\vdash_{A}e_{A}:T$ then $e_{A}$ is a value or $e_{A}\rightarrow e_{A}'$ or $e_{A}\rightarrow$ \emph{\textbf{Error}:\;string} where $A\in\lbrace H,M\rbrace$.
 \begin{proof}
 By structural induction on $e_{A}$.
-\input{proof/cases/progress/function-hm.tex}
-\input{proof/cases/progress/function-s.tex}
-\input{proof/cases/progress/type-abstraction.tex}
-\input{proof/cases/progress/number.tex}
-\input{proof/cases/progress/nil-hm.tex}
-\input{proof/cases/progress/nil-s.tex}
-\input{proof/cases/progress/cons-h.tex}
-\input{proof/cases/progress/cons-v-ms.tex}
-\input{proof/cases/progress/variable.tex}
-\input{proof/cases/progress/function-application-h.tex}
-\input{proof/cases/progress/function-application-m.tex}
-\input{proof/cases/progress/function-application-s.tex}
-\input{proof/cases/progress/type-application.tex}
-\input{proof/cases/progress/arithmetic-hm.tex}
-\input{proof/cases/progress/arithmetic-s.tex}
-\input{proof/cases/progress/null.tex}
-\input{proof/cases/progress/predicate.tex}
-\input{proof/cases/progress/if0-hm.tex}
-\input{proof/cases/progress/if0-s.tex}
-\input{proof/cases/progress/cons-e-ms.tex}
-\input{proof/cases/progress/field-h.tex}
-\input{proof/cases/progress/field-m.tex}
-\input{proof/cases/progress/field-s.tex}
-\input{proof/cases/progress/fix.tex}
-\input{proof/cases/progress/wrong-hm.tex}
-\input{proof/cases/progress/wrong-s.tex}
-\input{proof/cases/progress/ab.tex}
-\input{proof/cases/progress/as.tex}
-\input{proof/cases/progress/sa.tex}
+\input{proof/cases/progress/haskell-ml/function.tex}
+\input{proof/cases/progress/haskell-ml/type-abstraction.tex}
+\input{proof/cases/progress/haskell-ml/number.tex}
+\input{proof/cases/progress/haskell-ml/nil.tex}
+\input{proof/cases/progress/haskell-ml/cons-hv.tex}
+\input{proof/cases/progress/haskell-ml/cons-mv.tex}
+\input{proof/cases/progress/haskell-ml/variable.tex}
+\input{proof/cases/progress/haskell-ml/function-application-h.tex}
+\input{proof/cases/progress/haskell-ml/function-application-m.tex}
+\input{proof/cases/progress/haskell-ml/type-application.tex}
+\input{proof/cases/progress/haskell-ml/arithmetic.tex}
+\input{proof/cases/progress/haskell-ml/predicate.tex}
+\input{proof/cases/progress/haskell-ml/if0.tex}
+\input{proof/cases/progress/haskell-ml/cons-e.tex}
+\input{proof/cases/progress/haskell-ml/fields-h.tex}
+\input{proof/cases/progress/haskell-ml/fields-m.tex}
+\input{proof/cases/progress/haskell-ml/fix.tex}
+\input{proof/cases/progress/haskell-ml/wrong.tex}
+\input{proof/cases/progress/haskell-ml/haskell-ml.tex}
+\input{proof/cases/progress/haskell-ml/scheme.tex}
 \end{proof}
 \end{theorem}
