--- a/proof/theorems/haskell-ml-progress.tex
+++ b/proof/theorems/haskell-ml-progress.tex
@@ -1,5 +1,5 @@
 \begin{theorem}
-\label{ps}
+\label{hmps}
 If $\vdash_{A}e_{A}:T$ then $e_{A}$ is a value or $e_{A}\rightarrow e_{A}'$ or $e_{A}\rightarrow$ \emph{\textbf{Error}:\;string} where $A\in\lbrace H,M\rbrace$.
 \begin{proof}
 By structural induction on $e_{A}$.
