--- a/chapter-3.tex
+++ b/chapter-3.tex
@@ -6,19 +6,29 @@ The type soundness of the model of computation must be proven for it to be usefu
 
 Progress will be proven by structural induction on a well-typed, closed expression of each syntactic form.  In each case, the expression will be proven to be either a value, reducible to another expression, or reducible to an error.  Reductions of subexpressions are reductions of the top expression.  If a subexpression reduces to an error, the top expression reduces to the error.  In some cases, the syntactic forms of subexpressions must be determined to reduce the top expression.  If unique types for those subexpressions can be determined, they can be used to determine their syntactic forms.
 
+\subsection{Inversion Lemma}
+
 Inverting the typing relations enables the syntactic forms of well-typed expressions to determine the types of their subexpressions:
 
 \input{proof/lemmas/progress/inversion.tex}
+
+\subsection{Uniqueness of Types Lemma}
 
 Well-typed Haskell and ML expressions have unique types:
 
 \input{proof/lemmas/progress/uniqueness-of-types.tex}
 
+\subsection{Canonical Forms Lemma}
+
 The types of Haskell and ML values determine their syntactic forms:
 
 \input{proof/lemmas/progress/canonical-forms.tex}
 
+\subsection{Haskell and ML Progress Theorem}
+
 \input{proof/theorems/haskell-ml-progress.tex}
+
+\subsection{Scheme Progress Theorem}
 
 \input{proof/theorems/scheme-progress.tex}
 
@@ -26,14 +36,22 @@ The types of Haskell and ML values determine their syntactic forms:
 
 Preservation will be proven by cases on the rewrite rules.  In each case, the right side is be proven to be well-typed and have the same type as the left side.  Inversion (Lemma \ref{i}) and uniqueness of types (Lemma \ref{uot}) are used to determine the types of the left side and its subexpressions and the type of the right side.  Some rewrite rules use expression and type substitutions.
 
+\subsection{Expression Substitution Lemma}
+
 If $e_{A}^{1}$ is substituted for free occurrences of $x$ within $e_{A}^{2}$, $e_{A}^{1}$ and $x$ have the same type, and the result has the same type as $e_{A}^{2}$, where $A\in\lbrace H,M,S\rbrace$:
 
 \input{proof/lemmas/preservation/expression-substitution.tex}
+
+\subsection{Type Substitution Lemma}
 
 If $T_{1}$ is substituted for free occurrences of $X$ within $e_{A}$ of type $T_{2}$, the type of the result is $T_{1}$ substituted for free occurrences of $X$ within $T_{2}$, where $A\in\lbrace H,M\rbrace$:
 
 \input{proof/lemmas/preservation/type-substitution.tex}
 
-\input{proof/lemmas/preservation/evaluation-context-preservation.tex}
+\subsection{Evaluation Context Lemma}
+
+\input{proof/lemmas/preservation/evaluation-context.tex}
+
+\subsection{Preservation Theorem}
 
 \input{proof/theorems/preservation.tex}
