--- a/proof/lemmas/preservation/evaluation-context.tex
+++ b/proof/lemmas/preservation/evaluation-context.tex
@@ -1,5 +1,5 @@
 \begin{lemma}
-\label{ecp}
+\label{ec}
 If $\Gamma\vdash_{A}e_{A}^{1}:T_{1}$, $\Gamma\vdash_{A}e_{A}^{2}:T_{1}$, and $\mathscr{E}[e_{A}^{1}]:T_{2}$ then $\mathscr{E}[e_{A}^{2}]:T_{2}$ where $A\in\lbrace H,M,S\rbrace$.
 \begin{proof}
 By structural induction.
