--- a/proof/theorems/preservation.tex
+++ b/proof/theorems/preservation.tex
@@ -2,7 +2,7 @@
 \label{pn}
 If $\Gamma\vdash_{A}e_{A}^{1}:T$ and $e_{A}^{1}\rightarrow e_{A}^{2}$ then $\Gamma\vdash_{A}e_{A}^{2}:T$ where $A\in\lbrace H,M\rbrace$.  If $\Gamma\vdash_{S}e_{S}^{1}:TST$ and $e_{S}^{1}\rightarrow e_{S}^{2}$ then $\Gamma\vdash_{S}e_{S}^{2}:TST$.
 \begin{proof}
-By cases on the reductions $e_{A}^{1}\rightarrow e_{A}^{2}$ and $e_{S}^{1}\rightarrow e_{S}^{2}$ and Lemma \ref{ecp}.  Straightforward cases of Scheme preservation are elided.
+By cases on the reductions $e_{A}^{1}\rightarrow e_{A}^{2}$ and $e_{S}^{1}\rightarrow e_{S}^{2}$ and Lemma \ref{ec}.  Straightforward cases of Scheme preservation are elided.
 \input{proof/cases/preservation/function-application.tex}
 \input{proof/cases/preservation/type-application.tex}
 \input{proof/cases/preservation/addition.tex}
