Changed unforced to forced in S ps thm and cases. Revised S ps haskell case.

--- a/chapter-3.tex
+++ b/chapter-3.tex
@@ -24,13 +24,17 @@ The types of Haskell and ML values determine their syntactic forms:
 
 \input{proof/lemmas/progress/canonical-forms.tex}
 
-\subsection{Haskell and ML Progress Theorem}
+\subsection{Haskell Progress Theorem}
 
-\input{proof/theorems/haskell-ml-progress.tex}
+\input{proof/theorems/progress/haskell.tex}
+
+\subsection{ML Progress Theorem}
+
+\input{proof/theorems/progress/ml.tex}
 
 \subsection{Scheme Progress Theorem}
 
-\input{proof/theorems/scheme-progress.tex}
+\input{proof/theorems/progress/scheme.tex}
 
 \section{Preservation}
 
