--- a/proof/cases/progress/scheme/cons-v.tex
+++ b/proof/cases/progress/scheme/cons-v.tex
@@ -1,5 +1,5 @@
 \begin{case}
-$e_{A}=\mathtt{cons}\;v_{A}^{1}\;v_{A}^{2}$ where $A\in\lbrace M,S\rbrace$
+$e_{S}=\mathtt{cons}$ $v_{S}^{1}$ $v_{S}^{2}$
 
-$\mathtt{cons}\;v_{A}^{1}\;v_{A}^{2}$ is a value.
+$\mathtt{cons}$ $v_{S}^{1}$ $v_{S}^{2}$ is a forced value.
 \end{case}
