--- a/proof/cases/progress/scheme/function.tex
+++ b/proof/cases/progress/scheme/function.tex
@@ -1,5 +1,5 @@
 \begin{case}
 $e_{S}=\lambda x.e_{S}^{1}$
 
-$\lambda x.e_{S}^{1}$ is a value.
+$\lambda x.e_{S}^{1}$ is a forced value.
 \end{case}
