--- a/proof/cases/progress/scheme/number.tex
+++ b/proof/cases/progress/scheme/number.tex
@@ -1,5 +1,5 @@
 \begin{case}
-$e_{A}=\overline{n}$ where $A\in\lbrace H,M,S\rbrace$
+$e_{S}=\overline{n}$
 
-$\overline{n}$ is a value.
+$\overline{n}$ is a forced value.
 \end{case}
