Wording fixes for cf lemma and ch 3 intro pp's.

--- a/chapter-3.tex
+++ b/chapter-3.tex
@@ -1,10 +1,10 @@
 \chapter{Proof of Type Soundness}
 
-The type soundness of the model of computation must be proven for it to be useful.  Type soundness is ensured if progress of expressions and preservation of types are ensured.  Progress ensures that a well-typed, closed expression is either a value, reducible to another expression, or reducible to an error.  Preservation ensures that if a well-typed expression reduces to another expression, the other expression is well-typed and has the same type.  Proving progress and preservation proves type soundness.  The proof extends the proof by Kinghorn \cite{kinghorn07}, which was based on proofs by Pierce \cite{pierce02} and Matthews and Findler \cite{matthews07}.
+The type soundness of the model of computation must be proven for it to be useful.  Type soundness is ensured if progress of expressions and preservation of types are ensured.  Progress ensures that a well-typed, closed expression is either a normal form, reducible to another expression, or reducible to an error.  Preservation ensures that if a well-typed expression reduces to another expression, the other expression is well-typed and has the same type.  Proving progress and preservation proves type soundness.  The proof extends the proof by Kinghorn \cite{kinghorn07}, which was based on proofs by Pierce \cite{pierce02} and Matthews and Findler \cite{matthews07}.
 
 \section{Progress}
 
-Progress will be proven by structural induction on a well-typed, closed expression of each syntactic form.  In each case, the expression will be proven to be either a value, reducible to another expression, or reducible to an error.  Reductions of subexpressions are reductions of the top expression.  If a subexpression reduces to an error, the top expression reduces to the error.  In some cases, the syntactic forms of subexpressions must be determined to reduce the top expression.  If unique types for those subexpressions can be determined, they can be used to determine their syntactic forms.
+Progress will be proven by structural induction on a well-typed, closed expression of each syntactic form.  In each case, the expression will be proven to be either a normal form, reducible to another expression, or reducible to an error.  The reduction of a subexpression is the reduction of its parent expression.  If a subexpression reduces to an error, its parent expression reduces to the error.  In some cases, the syntactic form of a subexpression must be determined to reduce its parent expression.  Determining the unique type of a subexpression determines its syntactic form.
 
 \subsection{Inversion Lemma}
 
