--- a/proof/lemmas/progress/canonical-forms.tex
+++ b/proof/lemmas/progress/canonical-forms.tex
@@ -1,6 +1,6 @@
 \begin{lemma}
 \label{cf}
-The possible syntactic forms of values of various types.
+The syntactic forms of values of various types.
 \begin{enumerate}
 \item If $v_{A}:L$ then $v_{A}={^{L}A}S$ $v_{S}$ where $A\in\lbrace H,M\rbrace$.
 \item If $v_{A}:N$ then $v_{A}=\overline{n}$ where $A\in\lbrace H,M\rbrace$.
